Update `LedgerResponse` and `AccountResponse`, remove outdated fields, and add missing fields. (#549)
* update outdated `LedgerResponse`

* update outdated `AccountResponse`

* update docs

* update docs link